--- a/style.css
+++ b/style.css
@@ -1,60 +1,57 @@
-/* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Castoro&family=Raleway:wght@400;700&display=swap');
-
-/* main */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
-   box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-   align-items: center;
-   background-image: linear-gradient(90deg, #7d5fff, #7158e2);
-   display: flex;
-   height: 100vh;
-   justify-content: center;
-   font-family: 'Raleway', sans-serif;
-   margin: 0;
-   overflow: hidden;
+  background-image: linear-gradient(90deg, #7d5fff, #7158e2);
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
 }
 
 .search {
-   height: 50px;
-   position: relative;
+  position: relative;
+  height: 50px;
 }
 
 .search .input {
-   background-color: #ffffff;
-   border: 0;
-   font-size: 18px;
-   height: 50px;
-   padding: 15px;
-   transition: width 0.3s ease;
-   width: 50px;
+  background-color: #fff;
+  border: 0;
+  font-size: 18px;
+  padding: 15px;
+  height: 50px;
+  width: 50px;
+  transition: width 0.3s ease;
 }
 
 .btn {
-   background-color: #ffffff;
-   border: 0;
-   cursor: pointer;
-   font-size: 24px;
-   height: 50px;
-   left: 0;
-   position: absolute;
-   top: 0;
-   transition: transform 0.3 ease;
-   width: 50px;
+  background-color: #fff;
+  border: 0;
+  cursor: pointer;
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  transition: transform 0.3s ease;
 }
 
 .btn:focus,
 .input:focus {
-   outline: none;
+  outline: none;
 }
 
 .search.active .input {
-   width: 200px;
+  width: 200px;
 }
 
 .search.active .btn {
-   transform: translateX(198px);
+  transform: translateX(198px);
 }
